--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "buefy": "^0.6.3",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
