--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buefy": "^0.6.5",
     "global": "^4.3.2",
     "query-string": "^6.0.0",
+    "uuid": "^3.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
